[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI scripts/GUI.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://UI/Fonts/ChiKareGo2.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
color = Color( 0, 0, 0, 1 )

[node name="Return" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -29.0
margin_right = 51.0
margin_bottom = -8.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "Die?"

[node name="FullScreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -8.99999
margin_right = 51.0
margin_bottom = 12.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "FullScreen"

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 11.0
margin_right = 51.0
margin_bottom = 32.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
